tuna: update storage_list.xml
https://source.android.com/devices/storage/config-example.html

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -21,14 +21,12 @@
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- internal emulated storage -->
-    <storage android:mountPoint="/storage/sdcard0"
+    <storage
         android:storageDescription="@string/storage_internal"
-        android:primary="true"
         android:emulated="true"
         android:mtpReserve="100" />
     <!-- external USB OTG storage -->
     <storage android:mountPoint="/storage/usbdisk"
         android:storageDescription="@string/storage_usb"
-        android:primary="false"
         android:removable="true" />
 </StorageList>
